yaml_files/registery.yaml
apiVersion: v1
kind: Pod
metadata:
  name: local-docker-image-registry
  labels:
    app: registry
spec:
  containers:
  - name: registry
    image: registry:2
    ports:
    - containerPort: 5000
      hostPort: 5000
