yaml_files/book_author_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-author-app-service
  namespace: book-author
spec:
  type: LoadBalancer
  selector:
    app: book-author-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
