yaml_files/book_author_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-author-ingress
  namespace: book-author
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-author-app-service
                port:
                  number: 8000
